--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
-/node_modules
-/package-lock.json
+# Node
+node_modules/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Builds
+.next/
+.next-static/
+out/
+dist/
+coverage/
+
+# Environment
+.env
+.env.*
+!.env.example
+
+# OS/Editor
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+
+# Misc caches
+.vercel/
+.turbo/
+.cache/
